teste/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: teste-pod
  labels:
    app: teste-pod
spec:
  containers:
  - name: teste-pod
    image: php:7.4-apache
